# bot_trading_v9.1

./: .gitattributes  .gitignore  COMANDOS_SISTEMA.txt  ESTRUCTURA_PROYECTO.md  HARDENING_CHECKLIST.md  INSTRUCTIONS.md  README.md  ROADMAP.md  __init__.py  app.py  comandos.txt  pyproject.toml  requirements.txt  test_matplotlib_simple.py
base_env/: README.md  __init__.py  base_env.py  context.py  data_broker.py  decimal_utils.py  feature_engine.py  feature_store.py  indicator_fallback.py  mtf_view.py  resampler.py  risk_manager.py  rt_stream.py  smc_service.py
config/: README.md  config_loader.py  data.yaml  features.yaml  fees.yaml  hierarchical.yaml  oms.yaml  pipeline.yaml  rewards.yaml  rewards_optimized.yaml  risk.yaml  risk_commented.yaml  settings.yaml  smc.yaml  symbols.yaml  train.yaml
data/: README.md
data_pipeline/: README.md
docs/: AUDIT_SUMMARY.md  CORRECCIONES_FINALES.md  ENTRENAMIENTO_INICIADO.md  INDEX.md  MEJORAS_IMPLEMENTADAS_v9.1.6.md  README.md  RESUMEN_CORRECCIONES.md  RESUMEN_FINAL_CORRECCIONES.md  SOLUCION_BANCARROTA_COMPLETA.md  SOLUCION_BLOQUEO_TRADES.md  SOLUCION_COMPLETA.md  TIMESTAMPS_UTC.md
examples/: error_handling_example.py
monitoring/: monitor_actions.py  monitor_fixes.py  monitor_logs.py  monitor_training.ps1  monitor_training.py  start_training.ps1
scripts/: backtest_smoke_from_aligned.py  check_best_run.py  show_progress.py  smoke_run.py  train_ppo.py  watch_progress.py
tests/: README.md  conftest.py  test_bitget_collector_mapping.py  test_calendar.py  test_dup_guard.py  test_futures_data_presence.py  test_indicators.py  test_ledger_consistency.py  test_ledger_futures_consistency.py  test_policy_and_risk.py  test_reward_logic.py  test_rewards_map.py  test_runs_retention.py  test_sizing_filters.py  test_sizing_futures_min_notional.py  test_sizing_min_notional_bitget.py  test_strategy_persistence_leverage.py  test_training_metrics_callback.py  test_watch_progress_parser.py  test_watch_progress_training_block.py  test_watcher_counts.py  test_wrapper_leverage_mapping.py
train_env/: README.md  STRUCTURE.md  __init__.py  callbacks.py  gym_wrapper.py  learning_rate_reset_callback.py  model_manager.py  reward_shaper.py  strategy_aggregator.py  strategy_curriculum.py  strategy_logger.py  strategy_persistence.py  vec_factory.py  vec_factory_chrono.py
(+921 files in other folders)
