[tool.poetry]
name = "bot_trading_v9_1"
version = "0.1.0"
description = "Trading Bot v9.1 — Arquitectura Autónoma Profesional con gestión de riesgo, SMC, multi-TF y aprendizaje continuo"
authors = ["Alex B <alex@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

# --- Core Trading & Exchanges ---
ccxt = "^4.2.0"                # Conexión unificada a exchanges
python-bitget = "^1.0.0"       # SDK oficial BitGet
websocket-client = "^1.7.0"    # Streaming de datos en tiempo real

# --- Data Processing & Utils ---
pandas = "^2.2.0"
numpy = "^1.26.0"
polars = "^0.20.0"             # Alternativa rápida a pandas
pyarrow = "^15.0.0"            # Parquet / Arrow
influxdb-client = "^1.41.0"
asyncpg = "^0.29.0"            # PostgreSQL async
redis = "^5.0.1"               # Cache / cola mensajes
sqlalchemy = "^2.0.0"

# --- Indicators & Feature Engineering ---
ta-lib = "^0.4.28"             # Indicadores clásicos
scikit-learn = "^1.4.0"
statsmodels = "^0.14.0"

# --- Machine Learning ---
torch = "^2.2.0"               # PyTorch
tensorflow = "^2.16.0"         # Opcional: otra alternativa DL
xgboost = "^2.0.3"
optuna = "^3.5.0"              # Hiperparámetros

# --- Backtesting & Simulation ---
backtrader = "^1.9.78.123"
vectorbt = "^0.26.0"
zipline-reloaded = "^2.3.0"

# --- Infraestructura ---
asyncio = "*"                  # Asíncrono (stdlib, pero lo marcamos)
celery = "^5.3.0"              # Cola de tareas
typer = "^0.12.3"              # CLI profesional
loguru = "^0.7.2"              # Logging estructurado
python-dotenv = "^1.0.1"       # Variables de entorno

# --- Monitoring & Reports ---
prometheus-client = "^0.20.0"
matplotlib = "^3.8.0"
plotly = "^5.20.0"
reportlab = "^4.1.0"           # PDFs
jinja2 = "^3.1.3"              # Templates (HTML reports)

# --- Testing & Dev Tools ---
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
hypothesis = "^6.97.0"
ruff = "^0.2.0"                # Linter
black = "^24.2.0"              # Formatter
mypy = "^1.8.0"                # Type checker

[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
